# haskell-emacs-module

./: README.md  cabal.project  cabal2nix.sh  default.nix  haddock.sh  haskell-emacs-module.cabal  nix-shell.sh  shell.haskell-emacs-module.nix  shell.nix  upload.sh
emacs-module-ffi/: NOTES.md  emacs-module-ffi.cabal
emacs-module-ffi/sources/Emacs/: FFI.hs
emacs-module-types/: CONTRIBUTING.md  README.md  build.sh  configure.all.sh  configure.sh  default.nix  doctest.sh  emacs-module-types.cabal  emacs-module.nix  install.sh  repl.sh  shell.nix  test.sh  watch.sh
emacs-module-types/sources/Language/: Emacs.hs
emacs-module-types/sources/Language/Emacs/: Types.hs
emacs-module-types/test/golden/: haskell-emacs-module.golden
examples/Example/Language/: Emacs.hs
nix/: environment.nix  prelude.nix  shell.nix
overlays/: build.sh  install.sh  pic.nix  position-independant-code.nix
overlays/position-independent-code/: attributes.nix  build.sh  compiler.nix  default.nix  install.sh  make-haskell-package-set.nix  packages.nix  shell.nix
sources/Prelude/Language/: Emacs.hs
test/: GoldenTests.hs
