name:                emacs-module-types
version:             0.0.0
cabal-version:       >=2

----------------------------------------

build-type:          Simple 
category:            Data 
synopsis:            TODO 
description:         
 .
 TODO
 . 

homepage:            http://github.com/sboosali/Haskell-Emacs-Module#readme
bug-reports:         http://github.com/sboosali/Haskell-Emacs-Module/issues
author:              Spiros Boosalis, Takenari Shinohara
maintainer:          Spiros Boosalis <samboosalis@gmail.com>
copyright:           2018 Spiros Boosalis, 2016 Takenari Shinohara
license:             GPL-3.0
license-file:        LICENSE.txt
stability:           provisional
tested-with:
  -- GHC == 7.10.3
  -- GHC == 8.0.2
  GHC == 8.2.2
  -- GHC == 8.4.1

----------------------------------------

extra-source-files:
  README.md
  NOTES.md
  LICENSE.txt
  -- stack.yaml

-- data-files:
--   data/

----------------------------------------

source-repository head
  type:     git
  location: git://github.com/sboosali/Haskell-Emacs-Module.git
  subdir:   emacs-module-types

-- source-repository this
--   type:     git
--   location: https://github.com/sboosali/Haskell-Emacs-Module/tree/v0.1.0
-- -- subdir: Haskell-Emacs-Module
-- 
-- -- Update the `source-repository` for `this` package version on every release
-- -- (i.e. every hackage upload or metadata revision).  
-- -- Assuming you've created a git tag with that version, 
-- -- (e.g. `git tag -a v0.1.0 -m "Hackage Release of Version 0.1.0" && git push origin v0.1.0`). 

----------------------------------------
-- FLAGS

 

----------------------------------------
-- LIBRARY

library
 hs-source-dirs:
   sources
   examples

 ghc-options:

  --------------------
  -- warning groups
  --------------------

  -Wall

  --------------------
  -- disabled warnings
  --------------------

  -Wno-unticked-promoted-constructors

  --------------------
  -- enabled warnings
  --------------------

  -- enable
  -Wincomplete-uni-patterns
  -Wincomplete-record-updates
  -Widentities
  -Wmissing-methods
  -fwarn-tabs
 
  --------------------
  -- typed-holes
  --------------------

  -- use `typed-holes`, not `undefined`, during development

  -fdefer-typed-holes
  -Wtyped-holes

  --------------------
  -- (miscellaneous warnings)
  --------------------

  -- raise a warning into an error
  -- -Werror=missing-fields


 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------     
        -Wcompat
      
        --------------------
        -- enabled warnings
        --------------------
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances

        --------------------

 default-language: Haskell2010

 default-extensions:

   --------------------
   -- "controversial"
   --------------------
   NoImplicitPrelude
   -- NOTE thus every module implicitly has -XNoImplicitPrelude
   
   --------------------
   -- deriving
   --------------------
   AutoDeriveTypeable
   DeriveDataTypeable
   DeriveGeneric
   DeriveFunctor
   DeriveFoldable
   DeriveTraversable
   DeriveLift
   StandaloneDeriving

   --------------------
   -- syntax
   --------------------
   PackageImports
   LambdaCase
   EmptyCase
   TypeOperators
   PostfixOperators
   BangPatterns
   KindSignatures
   NamedFieldPuns
   RecordWildCards
   TupleSections
   MultiWayIf
   DoAndIfThenElse
   EmptyDataDecls
   InstanceSigs
   
   --------------------
   -- typeclasses
   --------------------
   MultiParamTypeClasses
   FlexibleContexts
   FlexibleInstances
   TypeFamilies
   FunctionalDependencies

   --------------------
   -- patterns
   --------------------
   ViewPatterns
   PatternSynonyms

   --------------------
   -- (miscellaneous extensions)
   --------------------
   ScopedTypeVariables

 other-extensions:

   --------------------
   -- macros
   --------------------
   TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
   OverloadedStrings
   OverloadedLists

   --------------------
   -- (miscellaneous extensions)
   --------------------
   -- RebindableSyntax
   -- kinds
   -- DataKinds ConstraintKinds
   -- harmful to inference
   -- GADTs RankNTypes
   -- (miscellaneous)

 exposed-modules:
   Language.Emacs
   Language.Emacs.Types

   Example.Language.Emacs

 other-modules:
   Prelude.Language.Emacs
   -- Paths_emacs_module_types

 -- autogen-modules:
   -- Paths_emacs_module_types

 build-depends:

 --------------------
 -- boot libraries / "standard" library
 --------------------

    base >=4.7 && <5
  , text 
  , bytestring
  , transformers
  , mtl
  , containers

  --------------------
  -- my packages
  -- (sboosali on github, sboo on hackage)
  --------------------

  , spiros    >=0.2
  , enumerate >=0.2 

  --------------------
  -- "extended" standard library 
  --------------------

  , deepseq
  , hashable
  , unordered-containers

  --------------------
  -- ekmett 
  --------------------

  , exceptions
  , lens

  --------------------
  -- (miscellaneous packages)
  --------------------

  -- ,


----------------------------------------
-- TESTS...

----------------------------------------

-- test-suite unit

--  hs-source-dirs:      test
--  main-is:             DocTests.hs
--  type:                exitcode-stdio-1.0

--  default-language:    Haskell2010
--  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

--  build-depends:
--     base
--   , emacs-module-types
--   , doctest

----------------------------------------
-- NOTES

-- originally generated from the `spirosboosalis-simple.hsfiles` template, with `stack new`:
-- 
-- $ stack new haskell-emacs-module https://raw.githubusercontent.com/sboosali/configuration/master/stack/templates/spirosboosalis.hsfiles 

----------------------------------------
